rest/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-server-deployment
  labels:
    app: rest-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rest-server
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: shso9201/demucs-rest:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: rest-server-service
  labels:
    app: rest-server
spec:
  type: ClusterIP
  selector:
    app: rest-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
