rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server-service
  labels:
    app: rest-server
spec:
  type: ClusterIP
  selector:
    app: rest-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
